@@ -60,10 +60,10 @@ COLOR:black'>%CIAO_ROOT%/docs/tutorials/Quoter/Simple/descriptors</span></code><
   </UL>
 </DIV>
 <P style="COLOR: black;    ">&nbsp;<FONT face="Courier New" size="2">&nbsp;&nbsp;&nbsp;&nbsp;
-  %DANCE_ROOT%/bin/dance_node_manager -ORBListenendpoints iiop://localhost:30000 -s
-  %CIAO_ROOT%/bin/ciao_componentserver -n Distributor=StockDistributor.ior</FONT></P>
+  %DANCE_ROOT%/bin/dance_node_manager -ORBListenendpoints iiop://localhost:30000
+  -n Distributor=StockDistributor.ior</FONT></P>
 <P style="COLOR: black;    "><FONT face="Courier New" size="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%DANCE_ROOT%/bin/dance_node_manager
-  -ORBListenendpoints iiop://localhost:40000 -s %CIAO_ROOT%/bin/ciao_componentserver -n Broker=StockBroker.ior</FONT></P>
+  -ORBListenendpoints iiop://localhost:40000 -n Broker=StockBroker.ior</FONT></P>
 <UL type="disc">
   <li style='COLOR:black;'> Start the execution manager:</li>
 </UL>
