@@ -1,3 +1,15 @@
+Wed Jun  9 07:00:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/tutorials/Quoter/Simple/04.html:
+          No need to pass in the component server
+
+        * tests/Bug_3769_Regression/Foo.idl:
+          Removed comment for Jeff
+
+        * tests/Bug_3769_Regression/Foo_exec.cpp:
+        * tests/Bug_3769_Regression/descriptors/DeploymentPlan.cdp:
+          Added test for string sequences
+
 Tue Jun  8 22:03:27 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
